[tool.poetry]
name = "grvtree"
version = "0.1.0"
description = ""
authors = ["Nori Hayashi <net@hayashi-lin.net>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
nltk = "^3.8.1"
nltk-tree-extensions = {git = "https://github.com/aslemen/nltk-tree-ext"}
more-itertools = "^10.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
